Closed
Bug 1476015
Opened 3 years ago
Closed 3 years ago
[Static Analysis] DEAD_STORE error in uriloader/exthandler/unix/nsOSHelperAppService.cpp
Categories
(Core :: DOM: Navigation, defect, P2)
Core
DOM: Navigation
Tracking
()
RESOLVED
FIXED
mozilla63
Tracking | Status | |
---|---|---|
firefox63 | --- | fixed |
People
(Reporter: rbartlensky, Assigned: rbartlensky)
References
Details
Attachments
(1 file)
uriloader/exthandler/unix/nsOSHelperAppService.cpp:225: error: DEAD_STORE The value written to &rv (type int) is never used. 223. LOG(("-- LookUpTypeAndDescription for extension '%s'\n", 224. NS_LossyConvertUTF16toASCII(aFileExtension).get())); 225. > nsresult rv = NS_OK; 226. nsAutoString mimeFileName; 227.
Assignee | ||
Comment 1•3 years ago
|
||
uriloader/exthandler/unix/nsOSHelperAppService.cpp:318: error: DEAD_STORE The value written to &rv (type int) is never used. 316. LOG(("Using extension '%s'\n", 317. NS_LossyConvertUTF16toASCII(aFileExtension).get())); 318. > nsresult rv = NS_OK; 319. nsCOMPtr<nsIFileInputStream> mimeFile; 320. nsCOMPtr<nsILineInputStream> mimeTypes;
Assignee | ||
Comment 2•3 years ago
|
||
uriloader/exthandler/unix/nsOSHelperAppService.cpp:441: error: DEAD_STORE The value written to &rv (type int) is never used. 439. NS_LossyConvertUTF16toASCII(aMajorType).get(), 440. NS_LossyConvertUTF16toASCII(aMinorType).get())); 441. > nsresult rv = NS_OK; 442. nsAutoString mimeFileName; 443.
Comment hidden (mozreview-request) |
![]() |
||
Comment 4•3 years ago
|
||
mozreview-review |
Comment on attachment 8992384 [details] Bug 1476015: Fix DEAD_STORE issues reported by infer. https://reviewboard.mozilla.org/r/257238/#review264070 Thank you! ::: commit-message-2ed15:1 (Diff revision 1) > +Bug 1476015: Fix DEAD_STORE issues. Perhaps this should say "Fix DEAD_STORE issues reported by Coverity"?
Attachment #8992384 -
Flags: review?(nfroyd) → review+
Assignee | ||
Comment 5•3 years ago
|
||
Sure, I will change it now.
Comment hidden (mozreview-request) |
Assignee | ||
Updated•3 years ago
|
Keywords: checkin-needed
Pushed by ebalazs@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/99ac85a273af Fix DEAD_STORE issues reported by infer. r=froydnj
Keywords: checkin-needed
Updated•3 years ago
|
Priority: -- → P2
Comment 8•3 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/99ac85a273af
Status: NEW → RESOLVED
Closed: 3 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•