Bug 1476015: Fix DEAD_STORE issues reported by infer. r=froydnj

MozReview-Commit-ID: 6DYpX3kCAl9